--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,22 +1,37 @@
 [tool.poetry]
 name = "gurmukhiutils"
-version = "1.0.0-alpha.0"
-description = "Utilities library for converting, analyzing, and testing Gurmukhi strings"
+version = "0.1.0"
+description = "Python utilities library for converting, analyzing, and testing Gurmukhi strings"
 license = "MIT"
 authors = ["Bhajneet S.K. <bhajneet@gmail.com>"]
 maintainers = ["Bhajneet S.K. <bhajneet@gmail.com>"]
 readme = "README.md"
-# homepage = ""
+homepage = "https://github.com/shabados/gurmukhiutils"
 repository = "https://github.com/shabados/gurmukhiutils"
-documentation = "https://docs.shabados.com/gurmukhi-utils/"
+documentation = "https://github.com/shabados/gurmukhiutils"
 keywords = [ "gurbani", "gurmukhi", "sikh", "transliterate", "unicode" ]
+classifiers = [
+    "Development Status :: 1 - Planning",
+    "Intended Audience :: Developers",
+    "Natural Language :: Panjabi",
+    "Operating System :: MacOS",
+    "Operating System :: Microsoft :: Windows",
+    "Operating System :: POSIX :: Linux",
+    "Topic :: Software Development :: Internationalization",
+    "Topic :: Software Development :: Libraries",
+    "Topic :: Text Processing",
+    "Topic :: Utilities",
+]
 
 [tool.poetry.dependencies]
-python = "^3.10"
+python = ">= 3.10, < 3.11"
 
 [tool.poetry.dev-dependencies]
-pytest = "^6.2"
 pre-commit = "^2.15.0"
+pytest = "^6.2"
+
+[tool.poetry.urls]
+"Bug Tracker" = "https://github.com/shabados/gurmukhiutils/issues"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
