--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,9 +4,9 @@
   "editor.formatOnSave": true,
   "editor.tabSize": 4,
   "python.testing.autoTestDiscoverOnSaveEnabled": true,
-  "python.testing.pytestArgs": [
-    "tests"
-  ],
+  "python.testing.pytestArgs": ["tests"],
   "python.testing.pytestEnabled": true,
   "python.testing.unittestEnabled": false,
+  "python.linting.flake8Enabled": true,
+  "python.linting.enabled": true
 }
