--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ classifiers = [
 python = ">= 3.10, < 3.11"
 
 [tool.poetry.dev-dependencies]
+black = "^22.6.0"
+flake8 = "^4.0.1"
+isort = "^5.10.1"
 pre-commit = "^2.15.0"
 pytest = "^6.2"
 
