--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -22,3 +22,9 @@ repos:
         language: system
         pass_filenames: false
         always_run: true
+
+  - repo: https://github.com/pre-commit/mirrors-mypy
+    rev: v0.961
+    hooks:
+      - id: mypy
+        args: [--disallow-any-unimported, --disallow-any-expr, --disallow-any-decorated, --disallow-any-explicit, --warn-unreachable, --strict, --show-error-codes, --pretty]
