--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ python = "^3.10"
 black = "^22.6.0"
 flake8 = "^4.0.1"
 isort = "^5.10.1"
+mypy = "^0.961"
 pre-commit = "^2.15.0"
 pytest = "^6.2"
 
@@ -48,3 +49,13 @@ filter_files = true
 
 [tool.black]
 line-length = 88
+
+[tool.mypy]
+disallow_any_unimported = true
+disallow_any_expr = true
+disallow_any_decorated = true
+disallow_any_explicit = true
+warn_unreachable = true
+strict = true
+show_error_codes = true
+pretty = true
