--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -28,3 +28,5 @@ repos:
     hooks:
       - id: mypy
         args: [--disallow-any-unimported, --disallow-any-expr, --disallow-any-decorated, --disallow-any-explicit, --warn-unreachable, --strict, --show-error-codes, --pretty]
+        additional_dependencies:
+          - pytest
