--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,15 +30,21 @@ classifiers = [
 [tool.poetry.dependencies]
 python = "^3.10"
 
-[tool.poetry.dev-dependencies]
-black = "^22.6.0"
-flake8 = "^4.0.1"
-isort = "^5.10.1"
-mypy = "^0.961"
-pytest = "^6.2"
-
 [tool.poetry.urls]
 "Bug Tracker" = "https://github.com/shabados/gurmukhiutils/issues"
+
+[tool.poetry.group.dev.dependencies]
+black = "^22.12.0"
+flake8 = "^5.0.4"
+isort = "^5.12.0"
+mypy = "^0.961"
+pytest = "^7.3.1"
+autohooks = "^23.4.0"
+autohooks-plugin-black = "^23.4.0"
+autohooks-plugin-flake8 = "^23.4.0"
+autohooks-plugin-isort = "^23.4.0"
+autohooks-plugin-pytest = "^23.4.0"
+autohooks-plugin-mypy = "^23.3.0"
 
 [tool.isort]
 known_first_party = "gurmukhiutils"
@@ -58,3 +64,10 @@ warn_unreachable = true
 strict = true
 show_error_codes = true
 pretty = true
+
+[tool.autohooks]
+pre-commit = ["autohooks.plugins.black", "autohooks.plugins.flake8", "autohooks.plugins.isort", "autohooks.plugins.mypy", "autohooks.plugins.pytest"]
+mode="poetry"
+
+[tool.autohooks.plugins.mypy]
+arguments = ["--disallow-any-unimported", "--disallow-any-expr", "--disallow-any-decorated", "--disallow-any-explicit", "--warn-unreachable", "--strict", "--show-error-codes", "--pretty"]
